Update header title for DriveX Academy

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ footer{max-width:1150px;margin:8px auto 40px;color:var(--muted);font-size:13px;t
 </head>
 <body>
 <header style="text-align:center;padding:20px;">
-  <h1>DriveX — Simulateur de stratégie de pit</h1>
+  <h1>DriveX Academy- Simulateur de stratégie de pit</h1>
   <p class="small">Fichier autonome HTML/JS/CSS — Déposez sur GitHub Pages</p>
 </header>
 
